# PolyAgent

./: .env.example  .gitignore  Containerfile  compose.yaml  pyproject.toml
db/: reset_paper_state.sql
db/migrations/: 001_initial_schema.sql  002_backtest_schema.sql  003_trade_log_and_live.sql  004_market_class.sql  005_btc5m.sql  006_quant_short_rename.sql  007_quant_short_view.sql  008_polyagent_trades_view.sql
docs/: getting-started.md  polyagent-architecture.canvas  polyagent-design.md  polyagent-implementation-plan.md
docs/feat/: btc-5m-phase1-plan.md  btc-5m-roadmap.canvas  btc-5m-roadmap.md  btc-5m-subsystem.canvas  btc-5m-subsystem.md  market-classifier-analytics-plan.md  market-classifier-analytics.canvas  market-classifier-analytics.md
docs/refactor/: quant-multi-asset-ops.md  quant-multi-asset-plan.md  quant-multi-asset.canvas  quant-multi-asset.md
polyagent/: __init__.py  main.py  models.py
polyagent/backtest/: __init__.py  data_loader.py  engine.py  estimator.py  report.py
polyagent/cli/: __init__.py  backtest_cmd.py  btc5m_stats.py  buy_review.py  class_stats.py  ingest_cmd.py  main.py  markets.py  migrate_cmd.py  performance.py  positions.py  quant_reresolve.py  quant_stats.py  quant_validate.py  reset.py  status.py  thesis_stats.py
polyagent/infra/: config.py  database.py  logging.py  pool.py  queues.py
polyagent/scripts/: __init__.py  backfill_market_class.py  check_token_coverage.py  ingest.py  migrate.py
polyagent/services/: __init__.py  bankroll.py  brain.py  classifier.py  embeddings.py  executor.py  exit_monitor.py  scanner.py
polyagent/strategies/: __init__.py  arbitrage.py  base.py  convergence.py  whale_copy.py
tests/: conftest.py
(+96 files in other folders)
