[project]
name = "polyagent"
version = "0.1.0"
description = "Autonomous Polymarket prediction market trading bot"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.90.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "voyageai>=0.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
polyagent = "polyagent.cli.main:cli"
polyagent-bot = "polyagent.main:run"

[tool.setuptools.packages.find]
include = ["polyagent*"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running database",
]
